// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AudienceTilesWidget should not render audiences that are not available (archived) 1`] = `
<div>
  <div
    class="googlesitekit-widget googlesitekit-widget--analyticsAudienceTiles googlesitekit-widget--no-padding googlesitekit-widget-audience-tiles"
  >
    <div
      class="googlesitekit-widget__body"
    >
      <div
        class="mdc-tab-bar googlesitekit-widget-audience-tiles__tabs"
        dir="ltr"
        role="tablist"
      >
        <div
          class="mdc-tab-scroller"
        >
          <div
            class="mdc-tab-scroller__scroll-area mdc-tab-scroller__scroll-area--scroll"
            style="margin-bottom: 0px;"
          >
            <div
              class="mdc-tab-scroller__scroll-content"
            >
              <button
                aria-label="All visitors"
                aria-selected="true"
                class="mdc-tab mdc-tab--active"
                role="tab"
                tabindex="0"
              >
                <span
                  class="mdc-tab__content"
                >
                  All visitors
                  <span
                    class="googlesitekit-info-tooltip"
                  >
                    <svg />
                  </span>
                </span>
                <span
                  class="mdc-tab-indicator mdc-tab-indicator--active"
                >
                  <span
                    class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
                    style=""
                  />
                </span>
                <div
                  class="mdc-tab__ripple mdc-ripple-upgraded--background-focused"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="googlesitekit-widget-audience-tiles__body"
      >
        <div
          class="googlesitekit-widget googlesitekit-widget--analyticsAudienceTiles googlesitekit-widget--no-padding"
        >
          <div
            class="googlesitekit-widget__body"
          >
            <div
              class="googlesitekit-audience-segmentation-tile googlesitekit-audience-segmentation-tile--partial-data"
            >
              <div
                class="googlesitekit-audience-segmentation-tile__metrics"
              >
                <span
                  class="googlesitekit-audience-segmentation-partial-data-notice"
                >
                  Still collecting full data for this timeframe, partial data is displayed for this group
                </span>
                <div
                  class="googlesitekit-audience-segmentation-tile-metric"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__value"
                    >
                      97
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      Visitors
                    </div>
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__badge-container"
                  >
                    <div
                      class="googlesitekit-change-badge"
                    >
                      +4.3%
                    </div>
                  </div>
                </div>
                <div
                  class="googlesitekit-audience-segmentation-tile-metric"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__value"
                    >
                      0.8
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      Visits per visitor
                    </div>
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__badge-container"
                  >
                    <div
                      class="googlesitekit-change-badge"
                    >
                      +310.7%
                    </div>
                  </div>
                </div>
                <div
                  class="googlesitekit-audience-segmentation-tile-metric"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__value"
                    >
                      0.94
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      Pages per visit
                    </div>
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__badge-container"
                  >
                    <div
                      class="googlesitekit-change-badge"
                    >
                      +7.5%
                    </div>
                  </div>
                </div>
                <div
                  class="googlesitekit-audience-segmentation-tile-metric"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__value"
                    >
                      42
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      113.5% of total pageviews
                    </div>
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__badge-container"
                  >
                    <div
                      class="googlesitekit-change-badge"
                    >
                      +320%
                    </div>
                  </div>
                </div>
                <div
                  class="googlesitekit-audience-segmentation-tile-metric googlesitekit-audience-segmentation-tile-metric--cities"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      Cities with the most visitors
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__content"
                    >
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__cities-metric"
                      >
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-name"
                        >
                          (not set)
                        </div>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-value"
                        >
                          99%
                        </div>
                      </div>
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__cities-metric"
                      >
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-name"
                        >
                          Dublin
                        </div>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-value"
                        >
                          64.9%
                        </div>
                      </div>
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__cities-metric"
                      >
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-name"
                        >
                          Cork
                        </div>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-value"
                        >
                          52.6%
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="googlesitekit-audience-segmentation-tile-metric googlesitekit-audience-segmentation-tile-metric--top-content"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      Top content by pageviews
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__content"
                    >
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__page-metric-container"
                      >
                        <a
                          aria-label="Test Post 11 (opens in a new tab)"
                          class="googlesitekit-cta-link"
                          href=""
                          rel="noopener noreferrer"
                          target="_blank"
                          title="Test Post 11"
                        >
                          <span
                            class="googlesitekit-cta-link__contents"
                          >
                            Test Post 11
                          </span>
                        </a>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__page-metric-value"
                        >
                          77
                        </div>
                      </div>
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__page-metric-container"
                      >
                        <a
                          aria-label="Test Post 2 (opens in a new tab)"
                          class="googlesitekit-cta-link"
                          href=""
                          rel="noopener noreferrer"
                          target="_blank"
                          title="Test Post 2"
                        >
                          <span
                            class="googlesitekit-cta-link__contents"
                          >
                            Test Post 2
                          </span>
                        </a>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__page-metric-value"
                        >
                          42
                        </div>
                      </div>
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__page-metric-container"
                      >
                        <a
                          class="googlesitekit-cta-link"
                          href=""
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          <span
                            class="googlesitekit-cta-link__contents"
                          />
                        </a>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__page-metric-value"
                        >
                          42
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AudienceTilesWidget should render correctly when there is partial data for Site Kit audiences 1`] = `
<div>
  <div
    class="googlesitekit-widget googlesitekit-widget--analyticsAudienceTiles googlesitekit-widget--no-padding googlesitekit-widget-audience-tiles"
  >
    <div
      class="googlesitekit-widget__body"
    >
      <div
        class="mdc-tab-bar googlesitekit-widget-audience-tiles__tabs"
        dir="ltr"
        role="tablist"
      >
        <div
          class="mdc-tab-scroller"
        >
          <div
            class="mdc-tab-scroller__scroll-area mdc-tab-scroller__scroll-area--scroll"
            style="margin-bottom: 0px;"
          >
            <div
              class="mdc-tab-scroller__scroll-content"
            >
              <button
                aria-label="New visitors"
                aria-selected="true"
                class="mdc-tab mdc-tab--active"
                role="tab"
                tabindex="0"
              >
                <span
                  class="mdc-tab__content"
                >
                  New visitors
                  <span
                    class="googlesitekit-info-tooltip"
                  >
                    <svg />
                  </span>
                </span>
                <span
                  class="mdc-tab-indicator mdc-tab-indicator--active"
                >
                  <span
                    class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
                    style=""
                  />
                </span>
                <div
                  class="mdc-tab__ripple mdc-ripple-upgraded--background-focused"
                />
              </button>
              <button
                aria-label="Returning visitors"
                aria-selected="false"
                class="mdc-tab"
                role="tab"
                tabindex="-1"
              >
                <span
                  class="mdc-tab__content"
                >
                  Returning visitors
                  <span
                    class="googlesitekit-info-tooltip"
                  >
                    <svg />
                  </span>
                </span>
                <span
                  class="mdc-tab-indicator"
                >
                  <span
                    class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
                  />
                </span>
                <div
                  class="mdc-tab__ripple"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="googlesitekit-widget-audience-tiles__body"
      >
        <div
          class="googlesitekit-widget googlesitekit-widget--analyticsAudienceTiles googlesitekit-widget--no-padding"
        >
          <div
            class="googlesitekit-widget__body"
          >
            <div
              class="googlesitekit-audience-segmentation-tile"
            >
              <div
                class="googlesitekit-audience-segmentation-tile__metrics"
              >
                <div
                  class="googlesitekit-audience-segmentation-tile-metric"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__value"
                    >
                      14
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      Visitors
                    </div>
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__badge-container"
                  >
                    <div
                      class="googlesitekit-change-badge googlesitekit-change-badge--negative"
                    >
                      -79.7%
                    </div>
                  </div>
                </div>
                <div
                  class="googlesitekit-audience-segmentation-tile-metric"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__value"
                    >
                      0.4
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      Visits per visitor
                    </div>
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__badge-container"
                  >
                    <div
                      class="googlesitekit-change-badge googlesitekit-change-badge--negative"
                    >
                      -53.5%
                    </div>
                  </div>
                </div>
                <div
                  class="googlesitekit-audience-segmentation-tile-metric"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__value"
                    >
                      0.51
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      Pages per visit
                    </div>
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__badge-container"
                  >
                    <div
                      class="googlesitekit-change-badge googlesitekit-change-badge--negative"
                    >
                      -47%
                    </div>
                  </div>
                </div>
                <div
                  class="googlesitekit-audience-segmentation-tile-metric"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__value"
                    >
                      19
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      24.4% of total pageviews
                    </div>
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__badge-container"
                  >
                    <div
                      class="googlesitekit-change-badge googlesitekit-change-badge--negative"
                    >
                      -38.7%
                    </div>
                  </div>
                </div>
                <div
                  class="googlesitekit-audience-segmentation-tile-metric googlesitekit-audience-segmentation-tile-metric--cities"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      Cities with the most visitors
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__content"
                    >
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__cities-metric"
                      >
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-name"
                        >
                          Cork
                        </div>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-value"
                        >
                          578.6%
                        </div>
                      </div>
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__cities-metric"
                      >
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-name"
                        >
                          Dublin
                        </div>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-value"
                        >
                          464.3%
                        </div>
                      </div>
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__cities-metric"
                      >
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-name"
                        >
                          (not set)
                        </div>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-value"
                        >
                          78.6%
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="googlesitekit-audience-segmentation-tile-metric googlesitekit-audience-segmentation-tile-metric--top-content"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      Top content by pageviews
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__content"
                    >
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__page-metric-container"
                      >
                        <a
                          class="googlesitekit-cta-link"
                          href=""
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          <span
                            class="googlesitekit-cta-link__contents"
                          />
                        </a>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__page-metric-value"
                        >
                          68
                        </div>
                      </div>
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__page-metric-container"
                      >
                        <a
                          aria-label="Test Post 6 (opens in a new tab)"
                          class="googlesitekit-cta-link"
                          href=""
                          rel="noopener noreferrer"
                          target="_blank"
                          title="Test Post 6"
                        >
                          <span
                            class="googlesitekit-cta-link__contents"
                          >
                            Test Post 6
                          </span>
                        </a>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__page-metric-value"
                        >
                          40
                        </div>
                      </div>
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__page-metric-container"
                      >
                        <a
                          aria-label="Test Post 2 (opens in a new tab)"
                          class="googlesitekit-cta-link"
                          href=""
                          rel="noopener noreferrer"
                          target="_blank"
                          title="Test Post 2"
                        >
                          <span
                            class="googlesitekit-cta-link__contents"
                          >
                            Test Post 2
                          </span>
                        </a>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__page-metric-value"
                        >
                          6
                        </div>
                      </div>
                      <span
                        class="googlesitekit-audience-segmentation-partial-data-notice"
                      >
                        Still collecting full data for this timeframe, partial data is displayed for this metric
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AudienceTilesWidget should render loading tiles when audiences are not syncing 1`] = `
<div>
  <div
    class="googlesitekit-widget googlesitekit-widget--analyticsAudienceTiles googlesitekit-widget--no-padding googlesitekit-widget-audience-tiles"
  >
    <div
      class="googlesitekit-widget__body"
    >
      <div
        class="googlesitekit-widget-audience-tiles__body"
      >
        <div
          class="googlesitekit-widget googlesitekit-widget--analyticsAudienceTiles googlesitekit-widget--no-padding"
        >
          <div
            class="googlesitekit-widget__body"
          >
            <div
              class="googlesitekit-audience-segmentation-tile-loading"
            >
              <div
                class="googlesitekit-preview-block"
                style="width: 100%; height: 20px;"
              >
                <div
                  class="googlesitekit-preview-block__wrapper"
                />
              </div>
              <div
                class="googlesitekit-preview-block"
                style="width: 100%; height: 52px;"
              >
                <div
                  class="googlesitekit-preview-block__wrapper"
                />
              </div>
              <div
                class="googlesitekit-preview-block"
                style="width: 100%; height: 52px;"
              >
                <div
                  class="googlesitekit-preview-block__wrapper"
                />
              </div>
              <div
                class="googlesitekit-preview-block"
                style="width: 100%; height: 52px;"
              >
                <div
                  class="googlesitekit-preview-block__wrapper"
                />
              </div>
              <div
                class="googlesitekit-preview-block"
                style="width: 100%; height: 52px;"
              >
                <div
                  class="googlesitekit-preview-block__wrapper"
                />
              </div>
              <div
                class="googlesitekit-preview-block"
                style="width: 100%; height: 52px;"
              >
                <div
                  class="googlesitekit-preview-block__wrapper"
                />
              </div>
              <div
                class="googlesitekit-preview-block"
                style="width: 100%; height: 52px;"
              >
                <div
                  class="googlesitekit-preview-block__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="googlesitekit-widget googlesitekit-widget--analyticsAudienceTiles googlesitekit-widget--no-padding"
        >
          <div
            class="googlesitekit-widget__body"
          >
            <div
              class="googlesitekit-audience-segmentation-tile-loading"
            >
              <div
                class="googlesitekit-preview-block"
                style="width: 100%; height: 20px;"
              >
                <div
                  class="googlesitekit-preview-block__wrapper"
                />
              </div>
              <div
                class="googlesitekit-preview-block"
                style="width: 100%; height: 52px;"
              >
                <div
                  class="googlesitekit-preview-block__wrapper"
                />
              </div>
              <div
                class="googlesitekit-preview-block"
                style="width: 100%; height: 52px;"
              >
                <div
                  class="googlesitekit-preview-block__wrapper"
                />
              </div>
              <div
                class="googlesitekit-preview-block"
                style="width: 100%; height: 52px;"
              >
                <div
                  class="googlesitekit-preview-block__wrapper"
                />
              </div>
              <div
                class="googlesitekit-preview-block"
                style="width: 100%; height: 52px;"
              >
                <div
                  class="googlesitekit-preview-block__wrapper"
                />
              </div>
              <div
                class="googlesitekit-preview-block"
                style="width: 100%; height: 52px;"
              >
                <div
                  class="googlesitekit-preview-block__wrapper"
                />
              </div>
              <div
                class="googlesitekit-preview-block"
                style="width: 100%; height: 52px;"
              >
                <div
                  class="googlesitekit-preview-block__wrapper"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AudienceTilesWidget should render when all configured audiences are matching available audiences 1`] = `
<div>
  <div
    class="googlesitekit-widget googlesitekit-widget--analyticsAudienceTiles googlesitekit-widget--no-padding googlesitekit-widget-audience-tiles"
  >
    <div
      class="googlesitekit-widget__body"
    >
      <div
        class="mdc-tab-bar googlesitekit-widget-audience-tiles__tabs"
        dir="ltr"
        role="tablist"
      >
        <div
          class="mdc-tab-scroller"
        >
          <div
            class="mdc-tab-scroller__scroll-area mdc-tab-scroller__scroll-area--scroll"
            style="margin-bottom: 0px;"
          >
            <div
              class="mdc-tab-scroller__scroll-content"
            >
              <button
                aria-label="All visitors"
                aria-selected="true"
                class="mdc-tab mdc-tab--active"
                role="tab"
                tabindex="0"
              >
                <span
                  class="mdc-tab__content"
                >
                  All visitors
                  <span
                    class="googlesitekit-info-tooltip"
                  >
                    <svg />
                  </span>
                </span>
                <span
                  class="mdc-tab-indicator mdc-tab-indicator--active"
                >
                  <span
                    class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
                    style=""
                  />
                </span>
                <div
                  class="mdc-tab__ripple mdc-ripple-upgraded--background-focused"
                />
              </button>
              <button
                aria-label="Purchasers"
                aria-selected="false"
                class="mdc-tab"
                role="tab"
                tabindex="-1"
              >
                <span
                  class="mdc-tab__content"
                >
                  Purchasers
                  <span
                    class="googlesitekit-info-tooltip"
                  >
                    <svg />
                  </span>
                </span>
                <span
                  class="mdc-tab-indicator"
                >
                  <span
                    class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
                  />
                </span>
                <div
                  class="mdc-tab__ripple"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="googlesitekit-widget-audience-tiles__body"
      >
        <div
          class="googlesitekit-widget googlesitekit-widget--analyticsAudienceTiles googlesitekit-widget--no-padding"
        >
          <div
            class="googlesitekit-widget__body"
          >
            <div
              class="googlesitekit-audience-segmentation-tile googlesitekit-audience-segmentation-tile--partial-data"
            >
              <div
                class="googlesitekit-audience-segmentation-tile__metrics"
              >
                <span
                  class="googlesitekit-audience-segmentation-partial-data-notice"
                >
                  Still collecting full data for this timeframe, partial data is displayed for this group
                </span>
                <div
                  class="googlesitekit-audience-segmentation-tile-metric"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__value"
                    >
                      90
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      Visitors
                    </div>
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__badge-container"
                  >
                    <div
                      class="googlesitekit-change-badge"
                    >
                      +1,700%
                    </div>
                  </div>
                </div>
                <div
                  class="googlesitekit-audience-segmentation-tile-metric"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__value"
                    >
                      0.8
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      Visits per visitor
                    </div>
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__badge-container"
                  >
                    <div
                      class="googlesitekit-change-badge"
                    >
                      +1,238.1%
                    </div>
                  </div>
                </div>
                <div
                  class="googlesitekit-audience-segmentation-tile-metric"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__value"
                    >
                      0.38
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      Pages per visit
                    </div>
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__badge-container"
                  >
                    <div
                      class="googlesitekit-change-badge"
                    >
                      +662.9%
                    </div>
                  </div>
                </div>
                <div
                  class="googlesitekit-audience-segmentation-tile-metric"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__value"
                    >
                      7
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      13.5% of total pageviews
                    </div>
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__badge-container"
                  >
                    <div
                      class="googlesitekit-change-badge googlesitekit-change-badge--negative"
                    >
                      -92.8%
                    </div>
                  </div>
                </div>
                <div
                  class="googlesitekit-audience-segmentation-tile-metric googlesitekit-audience-segmentation-tile-metric--cities"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      Cities with the most visitors
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__content"
                    >
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__cities-metric"
                      >
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-name"
                        >
                          (not set)
                        </div>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-value"
                        >
                          106.7%
                        </div>
                      </div>
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__cities-metric"
                      >
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-name"
                        >
                          Dublin
                        </div>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-value"
                        >
                          70%
                        </div>
                      </div>
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__cities-metric"
                      >
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-name"
                        >
                          Cork
                        </div>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-value"
                        >
                          56.7%
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="googlesitekit-audience-segmentation-tile-metric googlesitekit-audience-segmentation-tile-metric--top-content"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      Top content by pageviews
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__content"
                    >
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__page-metric-container"
                      >
                        <a
                          aria-label="Test Post 11 (opens in a new tab)"
                          class="googlesitekit-cta-link"
                          href=""
                          rel="noopener noreferrer"
                          target="_blank"
                          title="Test Post 11"
                        >
                          <span
                            class="googlesitekit-cta-link__contents"
                          >
                            Test Post 11
                          </span>
                        </a>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__page-metric-value"
                        >
                          77
                        </div>
                      </div>
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__page-metric-container"
                      >
                        <a
                          aria-label="Test Post 2 (opens in a new tab)"
                          class="googlesitekit-cta-link"
                          href=""
                          rel="noopener noreferrer"
                          target="_blank"
                          title="Test Post 2"
                        >
                          <span
                            class="googlesitekit-cta-link__contents"
                          >
                            Test Post 2
                          </span>
                        </a>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__page-metric-value"
                        >
                          42
                        </div>
                      </div>
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__page-metric-container"
                      >
                        <a
                          class="googlesitekit-cta-link"
                          href=""
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          <span
                            class="googlesitekit-cta-link__contents"
                          />
                        </a>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__page-metric-value"
                        >
                          42
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AudienceTilesWidget should render when configured audience is matching available audiences 1`] = `
<div>
  <div
    class="googlesitekit-widget googlesitekit-widget--analyticsAudienceTiles googlesitekit-widget--no-padding googlesitekit-widget-audience-tiles"
  >
    <div
      class="googlesitekit-widget__body"
    >
      <div
        class="mdc-tab-bar googlesitekit-widget-audience-tiles__tabs"
        dir="ltr"
        role="tablist"
      >
        <div
          class="mdc-tab-scroller"
        >
          <div
            class="mdc-tab-scroller__scroll-area mdc-tab-scroller__scroll-area--scroll"
            style="margin-bottom: 0px;"
          >
            <div
              class="mdc-tab-scroller__scroll-content"
            >
              <button
                aria-label="All visitors"
                aria-selected="true"
                class="mdc-tab mdc-tab--active"
                role="tab"
                tabindex="0"
              >
                <span
                  class="mdc-tab__content"
                >
                  All visitors
                  <span
                    class="googlesitekit-info-tooltip"
                  >
                    <svg />
                  </span>
                </span>
                <span
                  class="mdc-tab-indicator mdc-tab-indicator--active"
                >
                  <span
                    class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"
                    style=""
                  />
                </span>
                <div
                  class="mdc-tab__ripple mdc-ripple-upgraded--background-focused"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="googlesitekit-widget-audience-tiles__body"
      >
        <div
          class="googlesitekit-widget googlesitekit-widget--analyticsAudienceTiles googlesitekit-widget--no-padding"
        >
          <div
            class="googlesitekit-widget__body"
          >
            <div
              class="googlesitekit-audience-segmentation-tile googlesitekit-audience-segmentation-tile--partial-data"
            >
              <div
                class="googlesitekit-audience-segmentation-tile__metrics"
              >
                <span
                  class="googlesitekit-audience-segmentation-partial-data-notice"
                >
                  Still collecting full data for this timeframe, partial data is displayed for this group
                </span>
                <div
                  class="googlesitekit-audience-segmentation-tile-metric"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__value"
                    >
                      66
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      Visitors
                    </div>
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__badge-container"
                  >
                    <div
                      class="googlesitekit-change-badge"
                    >
                      +1,220%
                    </div>
                  </div>
                </div>
                <div
                  class="googlesitekit-audience-segmentation-tile-metric"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__value"
                    >
                      0.1
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      Visits per visitor
                    </div>
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__badge-container"
                  >
                    <div
                      class="googlesitekit-change-badge googlesitekit-change-badge--negative"
                    >
                      -83.3%
                    </div>
                  </div>
                </div>
                <div
                  class="googlesitekit-audience-segmentation-tile-metric"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__value"
                    >
                      0.66
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      Pages per visit
                    </div>
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__badge-container"
                  >
                    <div
                      class="googlesitekit-change-badge googlesitekit-change-badge--negative"
                    >
                      -0.1%
                    </div>
                  </div>
                </div>
                <div
                  class="googlesitekit-audience-segmentation-tile-metric"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__value"
                    >
                      95
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      190% of total pageviews
                    </div>
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__badge-container"
                  >
                    <div
                      class="googlesitekit-change-badge"
                    >
                      +156.8%
                    </div>
                  </div>
                </div>
                <div
                  class="googlesitekit-audience-segmentation-tile-metric googlesitekit-audience-segmentation-tile-metric--cities"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      Cities with the most visitors
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__content"
                    >
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__cities-metric"
                      >
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-name"
                        >
                          (not set)
                        </div>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-value"
                        >
                          145.5%
                        </div>
                      </div>
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__cities-metric"
                      >
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-name"
                        >
                          Dublin
                        </div>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-value"
                        >
                          95.5%
                        </div>
                      </div>
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__cities-metric"
                      >
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-name"
                        >
                          Cork
                        </div>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__cities-metric-value"
                        >
                          77.3%
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="googlesitekit-audience-segmentation-tile-metric googlesitekit-audience-segmentation-tile-metric--top-content"
                >
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__icon"
                  >
                    <svg />
                  </div>
                  <div
                    class="googlesitekit-audience-segmentation-tile-metric__container"
                  >
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__title"
                    >
                      Top content by pageviews
                    </div>
                    <div
                      class="googlesitekit-audience-segmentation-tile-metric__content"
                    >
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__page-metric-container"
                      >
                        <a
                          aria-label="Test Post 11 (opens in a new tab)"
                          class="googlesitekit-cta-link"
                          href=""
                          rel="noopener noreferrer"
                          target="_blank"
                          title="Test Post 11"
                        >
                          <span
                            class="googlesitekit-cta-link__contents"
                          >
                            Test Post 11
                          </span>
                        </a>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__page-metric-value"
                        >
                          77
                        </div>
                      </div>
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__page-metric-container"
                      >
                        <a
                          aria-label="Test Post 2 (opens in a new tab)"
                          class="googlesitekit-cta-link"
                          href=""
                          rel="noopener noreferrer"
                          target="_blank"
                          title="Test Post 2"
                        >
                          <span
                            class="googlesitekit-cta-link__contents"
                          >
                            Test Post 2
                          </span>
                        </a>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__page-metric-value"
                        >
                          42
                        </div>
                      </div>
                      <div
                        class="googlesitekit-audience-segmentation-tile-metric__page-metric-container"
                      >
                        <a
                          class="googlesitekit-cta-link"
                          href=""
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          <span
                            class="googlesitekit-cta-link__contents"
                          />
                        </a>
                        <div
                          class="googlesitekit-audience-segmentation-tile-metric__page-metric-value"
                        >
                          42
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AudienceTilesWidget should show the "no audiences" banner when there is no matching audience 1`] = `
<div>
  <div
    class="googlesitekit-widget googlesitekit-widget--analyticsAudienceTiles googlesitekit-widget--no-padding"
  >
    <div
      class="googlesitekit-widget__body"
    >
      <div
        class="googlesitekit-lean-cta-banner googlesitekit-no-audience-banner"
      >
        <div
          class="googlesitekit-lean-cta-banner__body"
        >
          <div
            class="googlesitekit-lean-cta-banner__body-icon"
          >
            <svg />
          </div>
          <div
            class="googlesitekit-lean-cta-banner__body-content"
          >
            <p>
              You don’t have any visitor groups selected. 
              <button
                class="googlesitekit-cta-link googlesitekit-cta-link--secondary"
              >
                <span
                  class="googlesitekit-cta-link__contents"
                >
                  Select groups
                </span>
              </button>
              .
            </p>
            <p>
              You can deactivate this widget in 
              <button
                class="googlesitekit-cta-link googlesitekit-cta-link--secondary"
              >
                <span
                  class="googlesitekit-cta-link__contents"
                >
                  Settings
                </span>
              </button>
              .
            </p>
          </div>
        </div>
        <div
          class="googlesitekit-lean-cta-banner__graphic"
        >
          <svg />
        </div>
      </div>
    </div>
  </div>
</div>
`;
